# gov-transparency-hub-api

./: example.env  pyproject.toml  setup_dabase.sql
app/: configs.py  main.py
app/db/: db_connection.py  db_models.py
app/dtos/: base.py  constants.py  expense_dto.py  revenue_dto.py
app/repositories/: expense_details.py  expense_invoices.py  expense_itens.py  revenue.py
app/routers/: __init__.py  expense.py  revenue.py
app/static/: index.html
